--- a/part 4/fichiers_de_base/index.html
+++ b/part 4/fichiers_de_base/index.html
@@ -35,7 +35,45 @@
         </section>
 
         <section id="places-list">
-            <!-- Les places seront ajoutées dynamiquement ici -->
+            <div class="place-card">
+                <div class="place-image">
+                    <img src="https://images.unsplash.com/photo-1522708323590-d24dbb6b0267" alt="Appartement Vue Mer">
+                </div>
+                <h3>Appartement Vue Mer</h3>
+                <p>Magnifique appartement avec vue panoramique sur la mer. Proche des commerces et des transports.</p>
+                <p>Prix par nuit: 120€</p>
+                <a href="place.html?id=1" class="details-button">Voir les détails</a>
+            </div>
+
+            <div class="place-card">
+                <div class="place-image">
+                    <img src="https://images.unsplash.com/photo-1522771739844-6a9f6d5f14af" alt="Studio Moderne Centre-Ville">
+                </div>
+                <h3>Studio Moderne Centre-Ville</h3>
+                <p>Studio entièrement rénové au cœur de la ville. Idéal pour les séjours courts.</p>
+                <p>Prix par nuit: 85€</p>
+                <a href="place.html?id=2" class="details-button">Voir les détails</a>
+            </div>
+
+            <div class="place-card">
+                <div class="place-image">
+                    <img src="https://images.unsplash.com/photo-1512917774080-9991f1c4c750" alt="Maison de Campagne">
+                </div>
+                <h3>Maison de Campagne</h3>
+                <p>Charmante maison traditionnelle entourée de nature. Parfaite pour les familles et les amis.</p>
+                <p>Prix par nuit: 150€</p>
+                <a href="place.html?id=3" class="details-button">Voir les détails</a>
+            </div>
+
+            <div class="place-card">
+                <div class="place-image">
+                    <img src="https://images.unsplash.com/photo-1564013799919-ab600027ffc6" alt="Loft Industriel">
+                </div>
+                <h3>Loft Industriel</h3>
+                <p>Espace de vie moderne dans un ancien entrepôt rénové. Style industriel et confortable.</p>
+                <p>Prix par nuit: 110€</p>
+                <a href="place.html?id=4" class="details-button">Voir les détails</a>
+            </div>
         </section>
     </main>
 
