--- a/part 4/fichiers_de_base/add_review.html
+++ b/part 4/fichiers_de_base/add_review.html
@@ -29,6 +29,7 @@
             </div>
 
             <form id="review-form" class="form">
+                <input type="hidden" id="place-id" name="place-id">
                 <div class="form-group">
                     <label for="review-text">Votre avis:</label>
                     <textarea id="review-text" name="review-text" required placeholder="Partagez votre expérience..."></textarea>
