--- a/part 4/fichiers_de_base/place.html
+++ b/part 4/fichiers_de_base/place.html
@@ -30,6 +30,9 @@
             <div id="reviews-list">
                 <!-- Les avis seront ajoutés dynamiquement ici -->
             </div>
+            <div class="add-review-button-container">
+                <a href="add_review.html" class="btn" id="add-review-btn">Ajouter un avis</a>
+            </div>
         </section>
 
         <section id="add-review" class="add-review" style="display: none;">
